Feat: Nova tela de Estoque Dark com Calculadora e Atualizacao do Banco de Dados

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="text_hint">#666666</color>
+    <color name="bg_input_dark">#2C2C2C</color>
+
 </resources>
